<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/corner">

        <LinearLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/imageHeight"
                android:contentDescription="@string/image"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subheading"
                    style="@style/layoutText"
                    android:fontFamily="@font/droid_sans"
                    android:lineSpacingMultiplier="1.2"
                    android:maxLines="2"
                    android:textColor="@color/subHeadingColor"
                    android:textSize="@dimen/subHeading"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/content"
                    style="@style/layoutText"
                    android:alpha="0.7"
                    android:fontFamily="@font/droid_sans"
                    android:lineSpacingMultiplier="1.2"
                    android:textColor="@color/contentColor"
                    android:textSize="@dimen/content"
                    android:textStyle="normal" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/moreAt"
                        style="@style/layoutText"
                        android:text="@string/moreAt"
                        android:textColor="@color/moreShortTextColor"
                        android:textSize="@dimen/moreShort"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/shortBy"
                        style="@style/layoutText"
                        android:text="@string/shortBY"
                        android:textColor="@color/moreShortTextColor"
                        android:textSize="@dimen/moreShort"
                        android:textStyle="normal"
                        android:visibility="invisible" />

                </FrameLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/footer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:visibility="invisible">

                    <include
                        layout="@layout/footer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="@color/colorPrimary" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/footer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/read_more_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/read_more_image"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/read_more"
                            style="@style/layoutText"
                            android:layout_gravity="start"
                            android:layout_marginTop="-2dp"
                            android:fontFamily="@font/droid_sans"
                            android:textColor="@color/tap"
                            android:textSize="@dimen/readMore" />

                        <TextView
                            android:id="@+id/tapHere"
                            style="@style/layoutText"
                            android:layout_gravity="start"
                            android:layout_marginTop="-1dp"
                            android:fontFamily="@font/roboto_thin"
                            android:text="@string/tapHere"
                            android:textColor="@color/tap"
                            android:textSize="@dimen/tapHere" />

                    </LinearLayout>

                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:visibility="invisible">

            <include
                layout="@layout/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
